added 2 paragraphs into index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <stylesheet src="style/style.css"></stylesheet>
     </head>
     <body>
-        <h1>Obligatorisk oppgave 1</h1>
+	    <h1>Obligatorisk oppgave 1</h1>
+
+	    <p> FIRST paragraph </p>
+	    <p> This is another paragraph <p>
     </body>
 </html>
