added 2 paragraphs into index.html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	    <h1>Obligatorisk oppgave 1</h1>
 
 	    <p> FIRST paragraph </p>
-	    <p> This is another paragraph <p>
+	    <p> This is another paragraph </p>
     </body>
 </html>
