La til litt content

--- a/index.html
+++ b/index.html
@@ -2,15 +2,94 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Simple Menu</title>
-        <script src="script/index.js"></script> <!-- Koblet til en js fil som ligger under script/index.js -->
-        <stylesheet src="style/style.css"></stylesheet>
+        <meta name="viewport" content="width=device-width, inital-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./style/style.css">
+        <title>Simple Menu</title>   
+        <!--Create missing tags in head-->
     </head>
     <body>
-	    <h1>Obligatorisk oppgave 1</h1>
-
-	    <p> FIRST paragraph </p>
-	    <p> This is another paragraph </p>
         
+        <div id="container">
+            <div id="header">
+                <h1>Obligatorisk oppgave 1</h1>
+                <p>First paragraph</p>
+            </div>
+
+            <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
+            <div id="menu">
+                <table>
+                    <tr>
+                        <th>Dish</th>
+                        <th>Price</th>
+                        <th>Allergies</th>
+                    </tr>
+                    <tr>
+                        <td>Chicken</td>
+                        <td>100</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Beef</td>
+                        <td>200</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Pork</td>
+                        <td>300</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Salmon</td>
+                        <td>400</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Shrimp</td>
+                        <td>500</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Vegetables</td>
+                        <td>600</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Salad</td>
+                        <td>700</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Ice cream</td>
+                        <td>800</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Chocolate</td>
+                        <td>900</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Cake</td>
+                        <td>1000</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Wine</td>
+                        <td>1100</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Beer</td>
+                        <td>1200</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Water</td>
+                        <td>1300</td>
+                        <td>Gluten</td>
+                    </tr>
+                    <tr>
+                        <td>Coffee</td>
+                        <
     </body>
 </html>
