La til 12 retter og tre enheter som inneholder væske

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./style/style.css">
         <title>Simple Menu</title>   
-        <!--Create missing tags in head-->
     </head>
     <body>
         
@@ -24,72 +23,73 @@
                         <th>Allergies</th>
                     </tr>
                     <tr>
-                        <td>Chicken</td>
-                        <td>100</td>
-                        <td>Gluten</td>
+                        <td>Frittata Olivia - omelett med bacon, purreløk, pasta, parmesan og persille. serveres med salat, focaccia og aioli</td>
+                        <td>150</td>
+                        <td>egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr>
-                        <td>Beef</td>
+                        <td>Insalata al salmone - varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
                         <td>200</td>
-                        <td>Gluten</td>
+                        <td>fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr>
-                        <td>Pork</td>
+                        <td>Insalata pollo e pancetta  - romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
                         <td>300</td>
-                        <td>Gluten</td>
+                        <td>egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr>
-                        <td>Salmon</td>
-                        <td>400</td>
-                        <td>Gluten</td>
+                        <td>Insalata caprese con parma - blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
+                        <td>281</td>
+                        <td>hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr>
-                        <td>Shrimp</td>
-                        <td>500</td>
-                        <td>Gluten</td>
+                        <td>4 formaggi - mozzarella, pecorino, parmesan, gorgonzola</td>
+                        <td>194</td>
+                        <td>hvete, melk</td>
                     </tr>
                     <tr>
-                        <td>Vegetables</td>
-                        <td>600</td>
-                        <td>Gluten</td>
+                        <td>Mare e monti - crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp </td>
+                        <td>301</td>
+                        <td>hvete, melk, skalldyr</td>
                     </tr>
                     <tr>
-                        <td>Salad</td>
-                        <td>700</td>
-                        <td>Gluten</td>
+                        <td>Pollo bianco - mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
+                        <td>200</td>
+                        <td>hvete, melk, pinjekjerne, soya</td>
                     </tr>
                     <tr>
-                        <td>Ice cream</td>
-                        <td>800</td>
-                        <td>Gluten</td>
+                        <td>Agli asparagi - asparges, crème fraîche, sitron</td>
+                        <td>199</td>
+                        <td>hvete, melk</td>
                     </tr>
                     <tr>
-                        <td>Chocolate</td>
-                        <td>900</td>
-                        <td>Gluten</td>
+                        <td>Al prosciutto cotto - tomat, mozzarella, italiensk skinke, basilikum</td>
+                        <td>201</td>
+                        <td>hvete, melk</td>
                     </tr>
                     <tr>
-                        <td>Cake</td>
-                        <td>1000</td>
-                        <td>Gluten</td>
+                        <td>Mozzarella di burrata - Tomat, nduja, mozzarella, burrata, ruccola</td>
+                        <td>299</td>
+                        <td>hvete, melk</td>
                     </tr>
                     <tr>
-                        <td>Wine</td>
-                        <td>1100</td>
-                        <td>Gluten</td>
+                        <td>Coca cola</td>
+                        <td>39</td>
+                        <td>Ingen allergener</td>
                     </tr>
                     <tr>
-                        <td>Beer</td>
-                        <td>1200</td>
-                        <td>Gluten</td>
+                        <td>Frydenlund</td>
+                        <td>89</td>
+                        <td>Hvete</td>
                     </tr>
                     <tr>
-                        <td>Water</td>
-                        <td>1300</td>
-                        <td>Gluten</td>
+                        <td>Vann</td>
+                        <td>15</td>
+                        <td>Ingen allergener</td>
                     </tr>
                     <tr>
-                        <td>Coffee</td>
-                        <
+                        <td>Is</td>
+                        <td>49</td>
+                        <td>Melk</td>
     </body>
 </html>
