Lagt til tittel 2 for å skille på meny og beskrivelse

--- a/index.html
+++ b/index.html
@@ -23,72 +23,84 @@
                         <th>Allergies</th>
                     </tr>
                     <tr>
-                        <td>Frittata Olivia - omelett med bacon, purreløk, pasta, parmesan og persille. serveres med salat, focaccia og aioli</td>
+                        <td><h2>Frittata Olivia</h2></td>
                         <td>150</td>
                         <td>egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
+                    <tr><td id="beskrivelse">varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td></tr>
                     <tr>
-                        <td>Insalata al salmone - varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
+                        <td><h2>Insalata al salmone</h2></td>
                         <td>200</td>
                         <td>fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
+                    <tr><td>marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td></tr>
+
+                    <tr><td id="beskrivelse">En bes</td></tr>
                     <tr>
-                        <td>Insalata pollo e pancetta  - romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
+                        <td><h1>Insalata pollo e pancetta</h1></td>
                         <td>300</td>
                         <td>egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
+                    <tr><td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td></tr>
                     <tr>
-                        <td>Insalata caprese con parma - blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
+                        <td><h2>Insalata caprese con parma</h2></td>
                         <td>281</td>
                         <td>hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
+                    <tr><td id="beskrivelse">blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td></tr>
                     <tr>
-                        <td>4 formaggi - mozzarella, pecorino, parmesan, gorgonzola</td>
+                        <td><h2>4 formaggi</h2></td> 
                         <td>194</td>
                         <td>hvete, melk</td>
                     </tr>
+                    <tr><td id="beskrivelse">mozzarella, pecorino, parmesan, gorgonzola</td></tr>
                     <tr>
-                        <td>Mare e monti - crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp </td>
+                        <td><h2>Mare e monti</h2></td>
                         <td>301</td>
                         <td>hvete, melk, skalldyr</td>
                     </tr>
+                    <tr><td id="beskrivelse">crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td></tr>
                     <tr>
-                        <td>Pollo bianco - mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
+                        <td><h2>Pollo bianco</h2></td>
                         <td>200</td>
                         <td>hvete, melk, pinjekjerne, soya</td>
                     </tr>
+                    <tr><td id="beskrivelse">mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td></tr>
                     <tr>
-                        <td>Agli asparagi - asparges, crème fraîche, sitron</td>
+                        <td><h2>Agli asparagi</h2></td>
                         <td>199</td>
                         <td>hvete, melk</td>
                     </tr>
+                    <tr><td id="beskrivelse">asparges, crème fraîche, sitron</td></tr>
                     <tr>
-                        <td>Al prosciutto cotto - tomat, mozzarella, italiensk skinke, basilikum</td>
+                        <td><h2>Al prosciutto cotto</h2></td>
                         <td>201</td>
                         <td>hvete, melk</td>
                     </tr>
+                    <tr><td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td></tr>
                     <tr>
-                        <td>Mozzarella di burrata - Tomat, nduja, mozzarella, burrata, ruccola</td>
+                        <td><h2>Mozzarella di burrata</h2></td>
                         <td>299</td>
                         <td>hvete, melk</td>
                     </tr>
+                    <tr><td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td></tr>
                     <tr>
-                        <td>Coca cola</td>
+                        <td><h2>Coca cola</h2></td>
                         <td>39</td>
                         <td>Ingen allergener</td>
                     </tr>
                     <tr>
-                        <td>Frydenlund</td>
+                        <td><h2>Frydenlund</h2></td>
                         <td>89</td>
                         <td>Hvete</td>
                     </tr>
                     <tr>
-                        <td>Vann</td>
+                        <td><h2>Vann</h2></td>
                         <td>15</td>
                         <td>Ingen allergener</td>
                     </tr>
                     <tr>
-                        <td>Is</td>
+                        <td><h2>Is</h2></td>
                         <td>49</td>
                         <td>Melk</td>
     </body>
