Strukturerte tabellen på en litt annen måte

--- a/index.html
+++ b/index.html
@@ -10,98 +10,118 @@
         
         <div id="container">
             <div id="header">
-                <h1>Obligatorisk oppgave 1</h1>
-                <p>First paragraph</p>
+                <h1>Simple Menu</h1>
             </div>
 
             <!--Create a container that will contain a menu for 15 different dishes with allergies in a table-->
             <div id="menu">
                 <table>
+                    <tr><td><h1>Meny</h1></td></tr>
                     <tr>
-                        <th>Dish</th>
-                        <th>Price</th>
-                        <th>Allergies</th>
+                        <th>Retter</th>
+                        <th>Pris</th>
+                        <th>Allergener</th>
                     </tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Frittata Olivia</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
                         <td>150</td>
-                        <td>egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
+                        <td id="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
-                    <tr><td id="beskrivelse">varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Insalata al salmone</h2></td>
-                        <td>200</td>
-                        <td>fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
-                    <tr><td>marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td></tr>
-
-                    <tr><td id="beskrivelse">En bes</td></tr>
                     <tr>
-                        <td><h1>Insalata pollo e pancetta</h1></td>
+                        <td id="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
+                        <td>200</td>
+                        <td id="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
+                    </tr>
+                    <tr class="row-food">
+                        <td><h2>Insalata pollo e pancetta</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
                         <td>300</td>
-                        <td>egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
+                        <td id="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
-                    <tr><td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td></tr>
-                    <tr>
+
+                    <tr class="row-food">
                         <td><h2>Insalata caprese con parma</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
                         <td>281</td>
-                        <td>hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
+                        <td>Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
-                    <tr><td id="beskrivelse">blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>4 formaggi</h2></td> 
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
                         <td>194</td>
-                        <td>hvete, melk</td>
+                        <td>Hvete, melk</td>
                     </tr>
-                    <tr><td id="beskrivelse">mozzarella, pecorino, parmesan, gorgonzola</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Mare e monti</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
                         <td>301</td>
-                        <td>hvete, melk, skalldyr</td>
+                        <td>Hvete, melk, skalldyr</td>
                     </tr>
-                    <tr><td id="beskrivelse">crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Pollo bianco</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
                         <td>200</td>
-                        <td>hvete, melk, pinjekjerne, soya</td>
+                        <td>Hvete, melk, pinjekjerne, soya</td>
                     </tr>
-                    <tr><td id="beskrivelse">mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td></tr>
                     <tr>
-                        <td><h2>Agli asparagi</h2></td>
+                        <td class="row-food"><h2>Agli asparagi</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">Asparges, crème fraîche, sitron</td>
                         <td>199</td>
-                        <td>hvete, melk</td>
+                        <td>Hvete, melk</td>
                     </tr>
-                    <tr><td id="beskrivelse">asparges, crème fraîche, sitron</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Al prosciutto cotto</h2></td>
+                    </tr>
+                    <tr>
+                        <td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
                         <td>201</td>
-                        <td>hvete, melk</td>
+                        <td>Hvete, melk</td>
                     </tr>
-                    <tr><td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td></tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Mozzarella di burrata</h2></td>
-                        <td>299</td>
-                        <td>hvete, melk</td>
                     </tr>
-                    <tr><td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td></tr>
                     <tr>
+                        <td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
+                        <td>299</td>
+                        <td>Hvete, melk</td>
+                    </tr>
+                    <tr class="row-food">
                         <td><h2>Coca cola</h2></td>
                         <td>39</td>
                         <td>Ingen allergener</td>
                     </tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Frydenlund</h2></td>
                         <td>89</td>
                         <td>Hvete</td>
                     </tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Vann</h2></td>
                         <td>15</td>
                         <td>Ingen allergener</td>
                     </tr>
-                    <tr>
+                    <tr class="row-food">
                         <td><h2>Is</h2></td>
                         <td>49</td>
                         <td>Melk</td>
+                    </tr>
     </body>
 </html>
