Lagt til korrekte klasser på elementer

--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
                         <td><h2>Frittata Olivia</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
+                        <td class="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
                         <td>150</td>
-                        <td id="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
+                        <td class="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Insalata al salmone</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
+                        <td class="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
                         <td>200</td>
-                        <td id="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
+                        <td class="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Insalata pollo e pancetta</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
+                        <td class="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
                         <td>300</td>
-                        <td id="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
+                        <td class="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
 
                     <tr class="row-food">
                         <td><h2>Insalata caprese con parma</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
+                        <td class="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
                         <td>281</td>
                         <td>Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
@@ -59,23 +59,23 @@
                         <td><h2>4 formaggi</h2></td> 
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
+                        <td class="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
                         <td>194</td>
-                        <td>Hvete, melk</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mare e monti</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
+                        <td class="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
                         <td>301</td>
-                        <td>Hvete, melk, skalldyr</td>
+                        <td class="allergener">Hvete, melk, skalldyr</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Pollo bianco</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
+                        <td class="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
                         <td>200</td>
                         <td>Hvete, melk, pinjekjerne, soya</td>
                     </tr>
@@ -83,45 +83,46 @@
                         <td class="row-food"><h2>Agli asparagi</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Asparges, crème fraîche, sitron</td>
+                        <td class="beskrivelse">Asparges, crème fraîche, sitron</td>
                         <td>199</td>
-                        <td>Hvete, melk</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Al prosciutto cotto</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
+                        <td class="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
                         <td>201</td>
-                        <td>Hvete, melk</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mozzarella di burrata</h2></td>
                     </tr>
                     <tr>
-                        <td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
+                        <td class="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
                         <td>299</td>
-                        <td>Hvete, melk</td>
+                        <td class="allergener">Hvete, melk</td>
                     </tr>
-                    <tr class="row-food">
-                        <td><h2>Coca cola</h2></td>
+                    <th><h2>Drikke</h2></th>
+                    <tr class="row-drink">
+                        <td><h3>Coca cola</h3></td>
                         <td>39</td>
-                        <td>Ingen allergener</td>
+                        <td class="allergener">Ingen allergener</td>
                     </tr>
-                    <tr class="row-food">
-                        <td><h2>Frydenlund</h2></td>
+                    <tr class="row-drink">
+                        <td><h3>Frydenlund</h3></td>
                         <td>89</td>
-                        <td>Hvete</td>
+                        <td class="allergener">Hvete</td>
                     </tr>
-                    <tr class="row-food">
-                        <td><h2>Vann</h2></td>
+                    <tr class="row-drink">
+                        <td><h3>Vann</h3></td>
                         <td>15</td>
-                        <td>Ingen allergener</td>
+                        <td class="allergener">Ingen allergener</td>
                     </tr>
-                    <tr class="row-food">
-                        <td><h2>Is</h2></td>
+                    <tr class="row-drink">
+                        <td><h3>Is</h3></td>
                         <td>49</td>
-                        <td>Melk</td>
+                        <td class="allergener">Melk</td>
                     </tr>
     </body>
 </html>
