--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </tr>
                     <tr>
                         <td id="beskrivelse">Varmrøkt laks, asparges, poteter, reddik, syltet rødløk, crème fraîche og pepperrotdressing, focaccia</td>
-                        <td>150</td>
+                        <td id="pris">150</td>
                         <td id="allergener">Egg, hvete, melk, sennep, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
@@ -35,7 +35,7 @@
                     </tr>
                     <tr>
                         <td id="beskrivelse">Marinert artisjokk, oliven, hvitløk, parmesan, sitron og brødsmuler</td>
-                        <td>200</td>
+                        <td id="pris">200</td>
                         <td id="allergener">Fisk, hvete, melk, selleri, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td id="beskrivelse">Romanosalat, kyllingbryst, sprøstekt pancetta, parmesan, soltørkede tomater, spinat, soyabønner og syltet rødløk</td>
-                        <td>300</td>
+                        <td id="pris">300</td>
                         <td id="allergener">Egg, hvete, melk, soya, svoveldioksid og sulfitt</td>
                     </tr>
 
@@ -52,76 +52,76 @@
                     </tr>
                     <tr>
                         <td id="beskrivelse">Blandet salat, parmaskinke, mozzarella di bufala, tomater, pesto genovese og pinjekjerner</td>
-                        <td>281</td>
-                        <td>Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
+                        <td id="pris">281</td>
+                        <td id="allergener">Hvete, melk, pinjekjerne, soya, svoveldioksid og sulfitt</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>4 formaggi</h2></td> 
                     </tr>
                     <tr>
                         <td id="beskrivelse">Mozzarella, pecorino, parmesan, gorgonzola</td>
-                        <td>194</td>
-                        <td>Hvete, melk</td>
+                        <td id="pris">194</td>
+                        <td id="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mare e monti</h2></td>
                     </tr>
                     <tr>
                         <td id="beskrivelse">Crème fraîche, chili- og hvitløksmarinert scampi, italiensk krydret pølse, blandet sopp</td>
-                        <td>301</td>
-                        <td>Hvete, melk, skalldyr</td>
+                        <td id="pris">301</td>
+                        <td id="allergener">Hvete, melk, skalldyr</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Pollo bianco</h2></td>
                     </tr>
                     <tr>
                         <td id="beskrivelse">Mozzarella, parmesan, kylling, sorte oliven, ruccola, pesto rosso</td>
-                        <td>200</td>
-                        <td>Hvete, melk, pinjekjerne, soya</td>
+                        <td id="pris">200</td>
+                        <td id="allergener">Hvete, melk, pinjekjerne, soya</td>
                     </tr>
                     <tr>
                         <td class="row-food"><h2>Agli asparagi</h2></td>
                     </tr>
                     <tr>
                         <td id="beskrivelse">Asparges, crème fraîche, sitron</td>
-                        <td>199</td>
-                        <td>Hvete, melk</td>
+                        <td id="pris">199</td>
+                        <td id="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Al prosciutto cotto</h2></td>
                     </tr>
                     <tr>
                         <td id="beskrivelse">tomat, mozzarella, italiensk skinke, basilikum</td>
-                        <td>201</td>
-                        <td>Hvete, melk</td>
+                        <td id="pris">201</td>
+                        <td id="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Mozzarella di burrata</h2></td>
                     </tr>
                     <tr>
                         <td id="beskrivelse">Tomat, nduja, mozzarella, burrata, ruccola</td>
-                        <td>299</td>
-                        <td>Hvete, melk</td>
+                        <td id="pris">299</td>
+                        <td id="allergener">Hvete, melk</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Coca cola</h2></td>
-                        <td>39</td>
-                        <td>Ingen allergener</td>
+                        <td id="pris">39</td>
+                        <td id="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Frydenlund</h2></td>
-                        <td>89</td>
-                        <td>Hvete</td>
+                        <td id="pris">89</td>
+                        <td id="allergener">Hvete</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Vann</h2></td>
-                        <td>15</td>
-                        <td>Ingen allergener</td>
+                        <td id="pris">15</td>
+                        <td id="allergener">Ingen allergener</td>
                     </tr>
                     <tr class="row-food">
                         <td><h2>Is</h2></td>
-                        <td>49</td>
-                        <td>Melk</td>
+                        <td id="pris">49</td>
+                        <td id="allergener">Melk</td>
                     </tr>
     </body>
 </html>
